# VEE

./: .gitignore  README.rst  launch-qemu-test.sh  vee-pack-exe.sh  vee_note
hw/: meson.build
hw/arm/: meson.build  stm32f4xx_gpio.c  vee_line.c  vee_pin.c  vee_spi.c  vee_ssd1306.c  vee_stm32f405.c  vee_stm32f405_soc.c  vee_stm32f4xx_spi.c
hw/vee/: meson.build  qmp-test-cmds.txt  test_api_schema.json  vee-qapi-commands.c  vee-qapi-commands.h  vee-qapi-commands.trace-events  vee-qapi-emit-events.c  vee-qapi-emit-events.h  vee-qapi-events.c  vee-qapi-events.h  vee-qapi-init-commands.c  vee-qapi-init-commands.h  vee-qapi-introspect.c  vee-qapi-introspect.h  vee-qapi-schema.json  vee-qapi-types.c  vee-qapi-types.h  vee-qapi-visit.c  vee-qapi-visit.h  vee-qapi.c
include/hw/arm/: vee_stm32f405_soc.h
include/hw/misc/: stm32f4xx_gpio.h  vee_line.h  vee_pin.h  vee_spi.h  vee_ssd1306.h  vee_stm32_gpio.h  vee_stm32f4xx_hw_info.h  vee_stm32f4xx_spi.h
include/vee/: common.h
monitor/: qmp-cmds.c
qapi/: misc.json
vee-test-kernel/: ssd1306_spi_no_systemclock_config.elf
