arm_ss.add(files('vee-qapi-commands.c'))
arm_ss.add(files('vee-qapi-init-commands.c'))
arm_ss.add(files('vee-qapi-types.c'))
arm_ss.add(files('vee-qapi-visit.c'))
arm_ss.add(files('vee-qapi-events.c'))
arm_ss.add(files('vee-qapi-emit-events.c'))
arm_ss.add(files('vee-qapi-introspect.c'))

arm_ss.add(files('vee-qapi.c'))
